// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownTheme getUrls should get navigation 1`] = `
NavigationItem {
  "children": Array [
    NavigationItem {
      "children": Array [
        NavigationItem {
          "children": Array [
            NavigationItem {
              "parent": [Circular],
              "title": "CategoryInterfaceA1",
              "url": "interfaces/_categories_.categoryinterfacea1.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "CategoryInterfaceA2",
              "url": "interfaces/_categories_.categoryinterfacea2.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "OtherInterfaceA",
              "url": "interfaces/_categories_.otherinterfacea.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "CategoryInterfaceA1",
              "url": "interfaces/_categories_.categoryinterfacea1.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "CategoryInterfaceA2",
              "url": "interfaces/_categories_.categoryinterfacea2.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "OtherInterfaceA",
              "url": "interfaces/_categories_.otherinterfacea.md",
            },
          ],
          "parent": undefined,
          "title": "categories",
          "url": "modules/_categories_.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
            ],
            "parent": undefined,
            "title": "categories",
            "url": "modules/_categories_.md",
          },
          "title": "CategoryInterfaceA1",
          "url": "interfaces/_categories_.categoryinterfacea1.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
            ],
            "parent": undefined,
            "title": "categories",
            "url": "modules/_categories_.md",
          },
          "title": "CategoryInterfaceA2",
          "url": "interfaces/_categories_.categoryinterfacea2.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
            ],
            "parent": undefined,
            "title": "categories",
            "url": "modules/_categories_.md",
          },
          "title": "OtherInterfaceA",
          "url": "interfaces/_categories_.otherinterfacea.md",
        },
        NavigationItem {
          "children": Array [
            NavigationItem {
              "parent": [Circular],
              "title": "BaseClass",
              "url": "classes/_classes_.baseclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "GenericClass",
              "url": "classes/_classes_.genericclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "InternalClass",
              "url": "classes/_classes_.internalclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "NonGenericClass",
              "url": "classes/_classes_.nongenericclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "SubClassA",
              "url": "classes/_classes_.subclassa.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "SubClassB",
              "url": "classes/_classes_.subclassb.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "INameInterface",
              "url": "interfaces/_classes_.inameinterface.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "IPrintInterface",
              "url": "interfaces/_classes_.iprintinterface.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "IPrintNameInterface",
              "url": "interfaces/_classes_.iprintnameinterface.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "BaseClass",
              "url": "classes/_classes_.baseclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "GenericClass",
              "url": "classes/_classes_.genericclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "InternalClass",
              "url": "classes/_classes_.internalclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "NonGenericClass",
              "url": "classes/_classes_.nongenericclass.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "SubClassA",
              "url": "classes/_classes_.subclassa.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "SubClassB",
              "url": "classes/_classes_.subclassb.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "INameInterface",
              "url": "interfaces/_classes_.inameinterface.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "IPrintInterface",
              "url": "interfaces/_classes_.iprintinterface.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "IPrintNameInterface",
              "url": "interfaces/_classes_.iprintnameinterface.md",
            },
          ],
          "parent": undefined,
          "title": "classes",
          "url": "modules/_classes_.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "BaseClass",
          "url": "classes/_classes_.baseclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "GenericClass",
          "url": "classes/_classes_.genericclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "InternalClass",
          "url": "classes/_classes_.internalclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "NonGenericClass",
          "url": "classes/_classes_.nongenericclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "SubClassA",
          "url": "classes/_classes_.subclassa.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "SubClassB",
          "url": "classes/_classes_.subclassb.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "INameInterface",
          "url": "interfaces/_classes_.inameinterface.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "IPrintInterface",
          "url": "interfaces/_classes_.iprintinterface.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "IPrintNameInterface",
          "url": "interfaces/_classes_.iprintnameinterface.md",
        },
        NavigationItem {
          "parent": undefined,
          "title": "comments",
          "url": "modules/_comments_.md",
        },
        NavigationItem {
          "children": Array [
            NavigationItem {
              "parent": [Circular],
              "title": "I",
              "url": "interfaces/_destrucuting_.i.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "I",
              "url": "interfaces/_destrucuting_.i.md",
            },
          ],
          "parent": undefined,
          "title": "destrucuting",
          "url": "modules/_destrucuting_.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "I",
                "url": "interfaces/_destrucuting_.i.md",
              },
            ],
            "parent": undefined,
            "title": "destrucuting",
            "url": "modules/_destrucuting_.md",
          },
          "title": "I",
          "url": "interfaces/_destrucuting_.i.md",
        },
        NavigationItem {
          "children": Array [
            NavigationItem {
              "parent": [Circular],
              "title": "moduleFunction",
              "url": "modules/_functions_.modulefunction.md",
            },
            NavigationItem {
              "parent": [Circular],
              "title": "moduleFunction",
              "url": "modules/_functions_.modulefunction.md",
            },
          ],
          "parent": undefined,
          "title": "functions",
          "url": "modules/_functions_.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "moduleFunction",
                "url": "modules/_functions_.modulefunction.md",
              },
            ],
            "parent": undefined,
            "title": "functions",
            "url": "modules/_functions_.md",
          },
          "title": "moduleFunction",
          "url": "modules/_functions_.modulefunction.md",
        },
        NavigationItem {
          "parent": undefined,
          "title": "literals",
          "url": "modules/_literals_.md",
        },
        NavigationItem {
          "parent": undefined,
          "title": "variables",
          "url": "modules/_variables_.md",
        },
      ],
      "isLabel": true,
      "parent": undefined,
      "title": "Modules",
      "url": "",
    },
    NavigationItem {
      "children": Array [
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "BaseClass",
          "url": "classes/_classes_.baseclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "GenericClass",
          "url": "classes/_classes_.genericclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "InternalClass",
          "url": "classes/_classes_.internalclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "NonGenericClass",
          "url": "classes/_classes_.nongenericclass.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "SubClassA",
          "url": "classes/_classes_.subclassa.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "SubClassB",
          "url": "classes/_classes_.subclassb.md",
        },
      ],
      "isLabel": true,
      "parent": undefined,
      "title": "Classes",
      "url": "",
    },
    NavigationItem {
      "children": Array [
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
            ],
            "parent": undefined,
            "title": "categories",
            "url": "modules/_categories_.md",
          },
          "title": "CategoryInterfaceA1",
          "url": "interfaces/_categories_.categoryinterfacea1.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
            ],
            "parent": undefined,
            "title": "categories",
            "url": "modules/_categories_.md",
          },
          "title": "CategoryInterfaceA2",
          "url": "interfaces/_categories_.categoryinterfacea2.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "OtherInterfaceA",
                "url": "interfaces/_categories_.otherinterfacea.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA1",
                "url": "interfaces/_categories_.categoryinterfacea1.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "CategoryInterfaceA2",
                "url": "interfaces/_categories_.categoryinterfacea2.md",
              },
              [Circular],
            ],
            "parent": undefined,
            "title": "categories",
            "url": "modules/_categories_.md",
          },
          "title": "OtherInterfaceA",
          "url": "interfaces/_categories_.otherinterfacea.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "INameInterface",
          "url": "interfaces/_classes_.inameinterface.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              [Circular],
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "IPrintInterface",
          "url": "interfaces/_classes_.iprintinterface.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintNameInterface",
                "url": "interfaces/_classes_.iprintnameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "BaseClass",
                "url": "classes/_classes_.baseclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "GenericClass",
                "url": "classes/_classes_.genericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "InternalClass",
                "url": "classes/_classes_.internalclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "NonGenericClass",
                "url": "classes/_classes_.nongenericclass.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassA",
                "url": "classes/_classes_.subclassa.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "SubClassB",
                "url": "classes/_classes_.subclassb.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "INameInterface",
                "url": "interfaces/_classes_.inameinterface.md",
              },
              NavigationItem {
                "parent": [Circular],
                "title": "IPrintInterface",
                "url": "interfaces/_classes_.iprintinterface.md",
              },
              [Circular],
            ],
            "parent": undefined,
            "title": "classes",
            "url": "modules/_classes_.md",
          },
          "title": "IPrintNameInterface",
          "url": "interfaces/_classes_.iprintnameinterface.md",
        },
        NavigationItem {
          "parent": NavigationItem {
            "children": Array [
              NavigationItem {
                "parent": [Circular],
                "title": "I",
                "url": "interfaces/_destrucuting_.i.md",
              },
              [Circular],
            ],
            "parent": undefined,
            "title": "destrucuting",
            "url": "modules/_destrucuting_.md",
          },
          "title": "I",
          "url": "interfaces/_destrucuting_.i.md",
        },
      ],
      "isLabel": true,
      "parent": undefined,
      "title": "Interfaces",
      "url": "",
    },
  ],
  "parent": undefined,
  "title": "typedoc-plugin-markdown",
  "url": "README.md",
}
`;

exports[`MarkdownTheme getUrls should getUrls when readme is defined 1`] = `
Array [
  "globals.md",
  "modules/_categories_.md",
  "modules/_classes_.md",
  "modules/_comments_.md",
  "modules/_destrucuting_.md",
  "modules/_functions_.md",
  "modules/_literals_.md",
  "modules/_variables_.md",
  "README.md",
  "modules/_categories_.md",
  "modules/_classes_.md",
  "modules/_comments_.md",
  "modules/_destrucuting_.md",
  "modules/_functions_.md",
  "modules/_literals_.md",
  "modules/_variables_.md",
  "modules/_categories_.md",
  "interfaces/_categories_.categoryinterfacea1.md",
  "interfaces/_categories_.categoryinterfacea2.md",
  "interfaces/_categories_.otherinterfacea.md",
  "modules/_categories_.md#let-categoryvariablea1",
  "modules/_categories_.md#let-categoryvariablea2",
  "modules/_categories_.md#let-categoryvariableb1",
  "modules/_categories_.md#let-othervariablea",
  "modules/_categories_.md#let-othervariableb",
  "modules/_categories_.md#categoryfunctiona1",
  "modules/_categories_.md#categoryfunctiona2",
  "modules/_categories_.md#categoryfunctiona3",
  "modules/_categories_.md#categoryfunctionb2",
  "modules/_categories_.md#otherfunctiona",
  "modules/_categories_.md#otherfunctionb",
  "interfaces/_categories_.categoryinterfacea1.md",
  "interfaces/_categories_.categoryinterfacea1.md#value",
  "interfaces/_categories_.categoryinterfacea2.md",
  "interfaces/_categories_.categoryinterfacea2.md#value",
  "interfaces/_categories_.otherinterfacea.md",
  "interfaces/_categories_.otherinterfacea.md#value",
  "modules/_classes_.md",
  "classes/_classes_.baseclass.md",
  "classes/_classes_.genericclass.md",
  "classes/_classes_.internalclass.md",
  "classes/_classes_.nongenericclass.md",
  "classes/_classes_.subclassa.md",
  "classes/_classes_.subclassb.md",
  "interfaces/_classes_.inameinterface.md",
  "interfaces/_classes_.iprintinterface.md",
  "interfaces/_classes_.iprintnameinterface.md",
  "classes/_classes_.baseclass.md",
  "classes/_classes_.baseclass.md#constructor",
  "classes/_classes_.baseclass.md#private-internalclass",
  "classes/_classes_.baseclass.md#protected-kind",
  "classes/_classes_.baseclass.md#name",
  "classes/_classes_.baseclass.md#static-instance",
  "classes/_classes_.baseclass.md#static-instances",
  "classes/_classes_.baseclass.md#abstract-abstractmethod",
  "classes/_classes_.baseclass.md#arrowfunction",
  "classes/_classes_.baseclass.md#private-checkname",
  "classes/_classes_.baseclass.md#getname",
  "classes/_classes_.baseclass.md#setname",
  "classes/_classes_.baseclass.md#static-catest",
  "classes/_classes_.baseclass.md#static-getinstance",
  "classes/_classes_.baseclass.md#static-getname",
  "classes/_classes_.genericclass.md",
  "classes/_classes_.genericclass.md#constructor",
  "classes/_classes_.genericclass.md#protected-p2",
  "classes/_classes_.genericclass.md#p3",
  "classes/_classes_.genericclass.md#private-p4",
  "classes/_classes_.genericclass.md#readonly-p5",
  "classes/_classes_.genericclass.md#value",
  "classes/_classes_.genericclass.md#getvalue",
  "classes/_classes_.genericclass.md#setvalue",
  "classes/_classes_.internalclass.md",
  "classes/_classes_.internalclass.md#constructor",
  "classes/_classes_.nongenericclass.md",
  "classes/_classes_.nongenericclass.md#constructor",
  "classes/_classes_.nongenericclass.md#protected-p2",
  "classes/_classes_.nongenericclass.md#p3",
  "classes/_classes_.nongenericclass.md#readonly-p5",
  "classes/_classes_.nongenericclass.md#value",
  "classes/_classes_.nongenericclass.md#getvalue",
  "classes/_classes_.nongenericclass.md#setvalue",
  "classes/_classes_.subclassa.md",
  "classes/_classes_.subclassa.md#constructor",
  "classes/_classes_.subclassa.md#protected-kind",
  "classes/_classes_.subclassa.md#name",
  "classes/_classes_.subclassa.md#static-instance",
  "classes/_classes_.subclassa.md#static-instances",
  "classes/_classes_.subclassa.md#nameproperty",
  "classes/_classes_.subclassa.md#readonlynameproperty",
  "classes/_classes_.subclassa.md#writeonlynameproperty",
  "classes/_classes_.subclassa.md#abstractmethod",
  "classes/_classes_.subclassa.md#arrowfunction",
  "classes/_classes_.subclassa.md#getname",
  "classes/_classes_.subclassa.md#print",
  "classes/_classes_.subclassa.md#printname",
  "classes/_classes_.subclassa.md#setname",
  "classes/_classes_.subclassa.md#static-catest",
  "classes/_classes_.subclassa.md#static-getinstance",
  "classes/_classes_.subclassa.md#static-getname",
  "classes/_classes_.subclassb.md",
  "classes/_classes_.subclassb.md#constructor",
  "classes/_classes_.subclassb.md#protected-kind",
  "classes/_classes_.subclassb.md#name",
  "classes/_classes_.subclassb.md#static-instance",
  "classes/_classes_.subclassb.md#static-instances",
  "classes/_classes_.subclassb.md#abstractmethod",
  "classes/_classes_.subclassb.md#arrowfunction",
  "classes/_classes_.subclassb.md#dosomething",
  "classes/_classes_.subclassb.md#getname",
  "classes/_classes_.subclassb.md#setname",
  "classes/_classes_.subclassb.md#static-catest",
  "classes/_classes_.subclassb.md#static-getinstance",
  "classes/_classes_.subclassb.md#static-getname",
  "interfaces/_classes_.inameinterface.md",
  "interfaces/_classes_.inameinterface.md#name",
  "interfaces/_classes_.inameinterface.md#getname",
  "interfaces/_classes_.iprintinterface.md",
  "interfaces/_classes_.iprintinterface.md#print",
  "interfaces/_classes_.iprintnameinterface.md",
  "interfaces/_classes_.iprintnameinterface.md#name",
  "interfaces/_classes_.iprintnameinterface.md#getname",
  "interfaces/_classes_.iprintnameinterface.md#print",
  "interfaces/_classes_.iprintnameinterface.md#printname",
  "modules/_comments_.md",
  "modules/_comments_.md#let-commentswithfencedblock",
  "modules/_comments_.md#let-commentswithincludes",
  "modules/_comments_.md#let-commentswithsymbollinks",
  "modules/_comments_.md#let-commentswithtags",
  "modules/_comments_.md#commentsinreturn",
  "modules/_comments_.md#functionwithdoclink",
  "modules/_destrucuting_.md",
  "interfaces/_destrucuting_.i.md",
  "modules/_destrucuting_.md#destructarraya",
  "modules/_destrucuting_.md#destructarrayb",
  "modules/_destrucuting_.md#destructarrayc",
  "modules/_destrucuting_.md#destructarraywithignoresa",
  "modules/_destrucuting_.md#destructarraywithignoresrest",
  "modules/_destrucuting_.md#destructarraywithrest",
  "modules/_destrucuting_.md#destructarraywithresta",
  "modules/_destrucuting_.md#destructarraywithrestb",
  "modules/_destrucuting_.md#destructobjecta",
  "modules/_destrucuting_.md#destructobjectb",
  "modules/_destrucuting_.md#destructobjectc",
  "modules/_destrucuting_.md#drawtext",
  "interfaces/_destrucuting_.i.md",
  "interfaces/_destrucuting_.i.md#name",
  "modules/_functions_.md",
  "modules/_functions_.modulefunction.md",
  "modules/_functions_.md#buildname",
  "modules/_functions_.md#exportedfunction",
  "modules/_functions_.md#functionwithdefaults",
  "modules/_functions_.md#functionwithoptionalvalue",
  "modules/_functions_.md#functionwithparameters",
  "modules/_functions_.md#functionwithrest",
  "modules/_functions_.md#internalfunction",
  "modules/_functions_.md#multiplesignatures",
  "modules/_functions_.md#const-variablefunction",
  "modules/_functions_.modulefunction.md",
  "modules/_functions_.modulefunction.md#let-functionvariable",
  "modules/_functions_.modulefunction.md#append",
  "modules/_functions_.modulefunction.md#prepend",
  "modules/_literals_.md",
  "modules/_literals_.md#let-typeliteral",
  "modules/_literals_.md#const-objectliteral",
  "modules/_variables_.md",
  "modules/_variables_.md#let-color",
  "modules/_variables_.md#let-decimal",
  "modules/_variables_.md#let-isdone",
  "modules/_variables_.md#let-list",
  "modules/_variables_.md#let-n",
  "modules/_variables_.md#let-notsure",
  "modules/_variables_.md#let-u",
  "modules/_variables_.md#let-x",
]
`;

exports[`MarkdownTheme getUrls should getUrls' 1`] = `
Array [
  "README.md",
  "modules/_categories_.md",
  "modules/_classes_.md",
  "modules/_comments_.md",
  "modules/_destrucuting_.md",
  "modules/_functions_.md",
  "modules/_literals_.md",
  "modules/_variables_.md",
  "modules/_categories_.md",
  "interfaces/_categories_.categoryinterfacea1.md",
  "interfaces/_categories_.categoryinterfacea2.md",
  "interfaces/_categories_.otherinterfacea.md",
  "modules/_categories_.md#let-categoryvariablea1",
  "modules/_categories_.md#let-categoryvariablea2",
  "modules/_categories_.md#let-categoryvariableb1",
  "modules/_categories_.md#let-othervariablea",
  "modules/_categories_.md#let-othervariableb",
  "modules/_categories_.md#categoryfunctiona1",
  "modules/_categories_.md#categoryfunctiona2",
  "modules/_categories_.md#categoryfunctiona3",
  "modules/_categories_.md#categoryfunctionb2",
  "modules/_categories_.md#otherfunctiona",
  "modules/_categories_.md#otherfunctionb",
  "interfaces/_categories_.categoryinterfacea1.md",
  "interfaces/_categories_.categoryinterfacea1.md#value",
  "interfaces/_categories_.categoryinterfacea2.md",
  "interfaces/_categories_.categoryinterfacea2.md#value",
  "interfaces/_categories_.otherinterfacea.md",
  "interfaces/_categories_.otherinterfacea.md#value",
  "modules/_classes_.md",
  "classes/_classes_.baseclass.md",
  "classes/_classes_.genericclass.md",
  "classes/_classes_.internalclass.md",
  "classes/_classes_.nongenericclass.md",
  "classes/_classes_.subclassa.md",
  "classes/_classes_.subclassb.md",
  "interfaces/_classes_.inameinterface.md",
  "interfaces/_classes_.iprintinterface.md",
  "interfaces/_classes_.iprintnameinterface.md",
  "classes/_classes_.baseclass.md",
  "classes/_classes_.baseclass.md#constructor",
  "classes/_classes_.baseclass.md#private-internalclass",
  "classes/_classes_.baseclass.md#protected-kind",
  "classes/_classes_.baseclass.md#name",
  "classes/_classes_.baseclass.md#static-instance",
  "classes/_classes_.baseclass.md#static-instances",
  "classes/_classes_.baseclass.md#abstract-abstractmethod",
  "classes/_classes_.baseclass.md#arrowfunction",
  "classes/_classes_.baseclass.md#private-checkname",
  "classes/_classes_.baseclass.md#getname",
  "classes/_classes_.baseclass.md#setname",
  "classes/_classes_.baseclass.md#static-catest",
  "classes/_classes_.baseclass.md#static-getinstance",
  "classes/_classes_.baseclass.md#static-getname",
  "classes/_classes_.genericclass.md",
  "classes/_classes_.genericclass.md#constructor",
  "classes/_classes_.genericclass.md#protected-p2",
  "classes/_classes_.genericclass.md#p3",
  "classes/_classes_.genericclass.md#private-p4",
  "classes/_classes_.genericclass.md#readonly-p5",
  "classes/_classes_.genericclass.md#value",
  "classes/_classes_.genericclass.md#getvalue",
  "classes/_classes_.genericclass.md#setvalue",
  "classes/_classes_.internalclass.md",
  "classes/_classes_.internalclass.md#constructor",
  "classes/_classes_.nongenericclass.md",
  "classes/_classes_.nongenericclass.md#constructor",
  "classes/_classes_.nongenericclass.md#protected-p2",
  "classes/_classes_.nongenericclass.md#p3",
  "classes/_classes_.nongenericclass.md#readonly-p5",
  "classes/_classes_.nongenericclass.md#value",
  "classes/_classes_.nongenericclass.md#getvalue",
  "classes/_classes_.nongenericclass.md#setvalue",
  "classes/_classes_.subclassa.md",
  "classes/_classes_.subclassa.md#constructor",
  "classes/_classes_.subclassa.md#protected-kind",
  "classes/_classes_.subclassa.md#name",
  "classes/_classes_.subclassa.md#static-instance",
  "classes/_classes_.subclassa.md#static-instances",
  "classes/_classes_.subclassa.md#nameproperty",
  "classes/_classes_.subclassa.md#readonlynameproperty",
  "classes/_classes_.subclassa.md#writeonlynameproperty",
  "classes/_classes_.subclassa.md#abstractmethod",
  "classes/_classes_.subclassa.md#arrowfunction",
  "classes/_classes_.subclassa.md#getname",
  "classes/_classes_.subclassa.md#print",
  "classes/_classes_.subclassa.md#printname",
  "classes/_classes_.subclassa.md#setname",
  "classes/_classes_.subclassa.md#static-catest",
  "classes/_classes_.subclassa.md#static-getinstance",
  "classes/_classes_.subclassa.md#static-getname",
  "classes/_classes_.subclassb.md",
  "classes/_classes_.subclassb.md#constructor",
  "classes/_classes_.subclassb.md#protected-kind",
  "classes/_classes_.subclassb.md#name",
  "classes/_classes_.subclassb.md#static-instance",
  "classes/_classes_.subclassb.md#static-instances",
  "classes/_classes_.subclassb.md#abstractmethod",
  "classes/_classes_.subclassb.md#arrowfunction",
  "classes/_classes_.subclassb.md#dosomething",
  "classes/_classes_.subclassb.md#getname",
  "classes/_classes_.subclassb.md#setname",
  "classes/_classes_.subclassb.md#static-catest",
  "classes/_classes_.subclassb.md#static-getinstance",
  "classes/_classes_.subclassb.md#static-getname",
  "interfaces/_classes_.inameinterface.md",
  "interfaces/_classes_.inameinterface.md#name",
  "interfaces/_classes_.inameinterface.md#getname",
  "interfaces/_classes_.iprintinterface.md",
  "interfaces/_classes_.iprintinterface.md#print",
  "interfaces/_classes_.iprintnameinterface.md",
  "interfaces/_classes_.iprintnameinterface.md#name",
  "interfaces/_classes_.iprintnameinterface.md#getname",
  "interfaces/_classes_.iprintnameinterface.md#print",
  "interfaces/_classes_.iprintnameinterface.md#printname",
  "modules/_comments_.md",
  "modules/_comments_.md#let-commentswithfencedblock",
  "modules/_comments_.md#let-commentswithincludes",
  "modules/_comments_.md#let-commentswithsymbollinks",
  "modules/_comments_.md#let-commentswithtags",
  "modules/_comments_.md#commentsinreturn",
  "modules/_comments_.md#functionwithdoclink",
  "modules/_destrucuting_.md",
  "interfaces/_destrucuting_.i.md",
  "modules/_destrucuting_.md#destructarraya",
  "modules/_destrucuting_.md#destructarrayb",
  "modules/_destrucuting_.md#destructarrayc",
  "modules/_destrucuting_.md#destructarraywithignoresa",
  "modules/_destrucuting_.md#destructarraywithignoresrest",
  "modules/_destrucuting_.md#destructarraywithrest",
  "modules/_destrucuting_.md#destructarraywithresta",
  "modules/_destrucuting_.md#destructarraywithrestb",
  "modules/_destrucuting_.md#destructobjecta",
  "modules/_destrucuting_.md#destructobjectb",
  "modules/_destrucuting_.md#destructobjectc",
  "modules/_destrucuting_.md#drawtext",
  "interfaces/_destrucuting_.i.md",
  "interfaces/_destrucuting_.i.md#name",
  "modules/_functions_.md",
  "modules/_functions_.modulefunction.md",
  "modules/_functions_.md#buildname",
  "modules/_functions_.md#exportedfunction",
  "modules/_functions_.md#functionwithdefaults",
  "modules/_functions_.md#functionwithoptionalvalue",
  "modules/_functions_.md#functionwithparameters",
  "modules/_functions_.md#functionwithrest",
  "modules/_functions_.md#internalfunction",
  "modules/_functions_.md#multiplesignatures",
  "modules/_functions_.md#const-variablefunction",
  "modules/_functions_.modulefunction.md",
  "modules/_functions_.modulefunction.md#let-functionvariable",
  "modules/_functions_.modulefunction.md#append",
  "modules/_functions_.modulefunction.md#prepend",
  "modules/_literals_.md",
  "modules/_literals_.md#let-typeliteral",
  "modules/_literals_.md#const-objectliteral",
  "modules/_variables_.md",
  "modules/_variables_.md#let-color",
  "modules/_variables_.md#let-decimal",
  "modules/_variables_.md#let-isdone",
  "modules/_variables_.md#let-list",
  "modules/_variables_.md#let-n",
  "modules/_variables_.md#let-notsure",
  "modules/_variables_.md#let-u",
  "modules/_variables_.md#let-x",
]
`;
